css/html changes to student hub secondary pages - Lato font instead of open sans - changes to navigation -> creating a responsive nav - fixing the type weight of “student hub” and aligning section titles to the right - defining styles for content such as header text, block quote, highlight box, buttons, info panes, video, images, social media links, tables, - getting rid of social media on footer, links on the footer TBD

--- a/css/secondary-page.css
+++ b/css/secondary-page.css
@@ -1,9 +1,14 @@
 /* body */
 body {
 	background: #fff;
-	font: "Lato", sans-serif;
+	font-family: Lato, Helvetica, sans-serif;
 	color: #666;
 	-webkit-font-smoothing: antialiased;
+}
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 img {
@@ -12,7 +17,7 @@ img {
 }
 
 a {
-    color: #fff;
+    color: #3289be;
 }
 
 .container {
@@ -25,8 +30,8 @@ a {
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 /* header */
@@ -34,16 +39,63 @@ a {
 #header {
     background-image: url(/images/header_image.png);
     background-repeat: no-repeat;
-      -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     padding-top: 30px;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
 }
 
 .msudenver_logo {
     width: 200px;
+}
+
+
+.navlinks {
+    text-align: right;
+}
+
+.studenthub {
+    float: left;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 90%;
+    margin: 90px 0 0 10px;
+
+}
+
+.sectiontitle {
+    color: #fff;
+    float: right;
+    font-size: 35px;
+    margin: 90px 0 0 40px;
+    text-transform: uppercase;
+}
+
+li.toplinks {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 20px;
+}
+
+a.nav-links {
+    color: white;
+    
+}
+
+a.nav-links:hover {
+    color: #98cceb;
+    
+}
+
+li.toplinks-social {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 10px;
+
 }
 
 a.breadcrumbs {
@@ -53,58 +105,61 @@ a.breadcrumbs {
 .breadcrumbs {
     text-transform: uppercase;
     background: #f5f5f5;
-    padding: 10px;
-}
-
-.navlinks {
-    text-align: right;
-}
-
-.studenthub {
-    float: left;
-    color: #fff;
-    font-size: 48px;
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 80%;
-    margin: 70px 0 0 40px;
-
-}
-
-
-
-.sectiontitle {
-    color: #fff;
-    float: right;
-    font: 400 48px "Open Sans", sans-serif;
-    margin: 70px 0 0 40px;
-}
-
-sectiontitle {
-    color: #fff;
+    padding: 10px 0px 10px 0px;
     
 }
 
-li.toplinks {
-    display: inline-block;
-    vertical-align: top;
-    margin-left: 20px;
+
+/* page content */
+
+h1, h2, h3, h4, h5, h6 {
+    color: #006a93;
+    text-transform: uppercase;
 }
 
-li.toplinks-social {
-    display: inline-block;
-    vertical-align: top;
-    margin-left: 10px;
+
+blockquote {
+    border: 0;
+	font-style: italic;
+	font-size: 20px;
+	padding: 0;
+    color: #3289be;
+  }
+
+.HighlightBox {
+    background: #dc3d37;
+    color: #fff;
+    padding: 1.5em;
+    margin-bottom: 1.5em;
+    position: relative;
 }
 
-/* modules */
+.HighlightBox-title {
+    color: #fff;
+    font-size: 1.5em;
+    text-align: center;
+    text-transform: uppercase;
+}
 
-
-/* content */
-
-h1 {
+.panel-group {
+    margin-bottom: 20px;
+    border-radius: 0;
+}
+.panel-title {
     color: #fff;
 }
+
+.panel-default {
+    border: 1px solid #354f60;
+}
+
+.panel-default>.panel-heading {
+    background: #354f60;
+    color: #fff;
+    font-size: 1.5em;
+    border-color: #354f60;
+}
+
 
 
 /* footer */
@@ -137,4 +192,235 @@ a.footer {
 
 .bg-dark {
     background: #111;
+}
+
+
+.social-links {
+    font-size: 250%;
+    letter-spacing: 10px;
+
+}
+
+/* nav bar */
+
+
+.navbar {
+    background: transparent;
+    border: 0;
+    
+
+}
+
+
+/* buttons */
+
+.custombtn {
+    border-radius: 0px;
+    margin-bottom: 15px;
+    width: 100%;
+    font-weight: 100 !important;
+    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.176);
+}
+
+.turquoise-f {
+  color: red!important
+}
+.turquoise {
+  background: #1ABC9C
+}
+.turquoise:hover {
+  background: #17a689
+}
+.greensea {
+  background: #16A085;
+  color: #fff!important
+}
+.greensea:hover {
+  background: #138a72;
+  color: #fff!important
+}
+.emerald {
+  background: #2ECC71;
+  color: #fff!important
+}
+.emerald:hover {
+  background: #29b765;
+  color: #fff!important
+}
+.nephritis {
+  background: #27AE60;
+  color: #fff!important
+}
+.nephritis:hover {
+  background: #295;
+  color: #fff!important
+}
+.peterriver {
+  background: #3498DB;
+  color: #fff!important
+}
+.peterriver:hover {
+  background: #258cd1;
+  color: #fff!important
+}
+.belizehole {
+  background: #2980B9;
+  color: #fff!important
+}
+.belizehole:hover {
+  background: #2472a4;
+  color: #fff!important
+}
+.amethyst {
+  background: #9B59B6;
+  color: #fff!important
+}
+.amethyst:hover {
+  background: #8f4bab;
+  color: #fff!important
+}
+.wisteria {
+  background: #8E44AD;
+  color: #fff!important
+}
+.wisteria:hover {
+  background: #7f3d9b;
+  color: #fff!important
+}
+.wetasphalt {
+  background: #34495E;
+  color: #fff!important
+}
+.wetasphalt:hover {
+  background: #34495e;
+  color: #fff!important
+}
+.midnightblue {
+  background: #2C3E50;
+  color: #fff!important
+}
+.midnightblue:hover {
+  background: #4f6f8f;
+  color: #fff!important
+}
+.sunflower {
+  background: #F1C40F;
+  color: #fff!important
+}
+.sunflower:hover {
+  background: #dfb50d;
+  color: #fff!important
+}
+.orange {
+  background: #F39C12;
+  color: #fff!important
+}
+.orange:hover {
+  background: #e6910c;
+  color: #fff!important
+}
+.carrot {
+  background: #E67E22;
+  color: #fff!important
+}
+.carrot:hover {
+  background: #dc7419;
+  color: #fff!important
+}
+.pumpkin {
+  background: #D35400;
+  color: #fff!important
+}
+.pumpkin:hover {
+  background: #fa6400;
+  color: #fff!important
+}
+.alizarin {
+  background: #E74C3C;
+  color: #fff!important
+}
+.alizarin:hover {
+  background: #e02e1c;
+  color: #fff!important
+}
+.pomegranate {
+  background: #C0392B;
+  color: #fff!important
+}
+.pomegranate:hover {
+  background: #c0392b;
+  color: #fff!important
+}
+.clouds {
+  background: #ECF0F1;
+  color: #000!important
+}
+.clouds:hover {
+  background: #67848b;
+  color: #000!important
+}
+.silver {
+  background: #BDC3C7;
+  color: #000!important
+}
+.silver:hover {
+  background: #6a757d;
+  color: #000!important
+}
+.asbestos {
+  background: #7F8C8D;
+  color: #000!important
+}
+.asbestos:hover {
+  background: #6c7879;
+  color: #000!important
+}
+.concrete {
+  background: #95A5A6;
+  color: #000!important
+}
+.concrete:hover {
+  background: #637576;
+  color: #000!important
+}
+.darkgray {
+  background: #333
+}
+.lightgray {
+  background: #bcbaba
+}
+.white {
+  background: #fff;
+  color: #000
+}
+.black {
+  background: #000;
+  color: #fff
+}
+.contentlink {
+  background: #1b557a
+}
+.rowdyblue {
+  background: #00447c;
+  color: #fff!important
+}
+.rowdyblue:hover {
+  background: #003663;
+  color: #fff!important
+}
+.rowdyred {
+  background: #c50f3c;
+  color: #fff!important
+}
+.rowdyred:hover {
+  background: #ad0d35;
+  color: #fff!important
+}
+.rowdygray {
+  background: #717073;
+  color: #fff!important
+}
+.rowdygray:hover {
+  background: #646366;
+  color: #fff!important
 }
